--- a/TypeScriptDemo/package.json
+++ b/TypeScriptDemo/package.json
@@ -26,5 +26,9 @@
   "dependencies": {
     "systemjs": "^0.19.41",
     "typescript": "^2.1.4"
+  },
+  "devDependencies": {
+    "@types/jasmine": "^2.5.42",
+    "jasmine-core": "^2.5.2"
   }
 }
