--- a/TypeScriptDemo/TypeScriptDemo.csproj
+++ b/TypeScriptDemo/TypeScriptDemo.csproj
@@ -30,6 +30,7 @@
     <Content Include="img\create_typescript_project.png" />
     <Content Include="img\gulp-text.png" />
     <Content Include="img\jasmine-logo.png" />
+    <Content Include="img\sheep.png" />
     <Content Include="lib\highlightjs\highlight.min.js" />
     <Content Include="pages\getting-started.html" />
     <Content Include="pages\my-first-typescript-app.html" />
@@ -54,6 +55,8 @@
     <TypeScriptCompile Include="core\page-viewer.spec.ts" />
     <TypeScriptCompile Include="core\page-viewer.ts" />
     <TypeScriptCompile Include="example-source\adding-types.ts" />
+    <TypeScriptCompile Include="example-source\classes-and-inheritance.ts" />
+    <TypeScriptCompile Include="example-source\generics-and-casting.ts" />
     <TypeScriptCompile Include="example-source\hello-world.ts" />
     <TypeScriptCompile Include="example-source\interface-function.ts" />
     <TypeScriptCompile Include="example-source\interface-indexer.ts" />
@@ -61,7 +64,6 @@
     <TypeScriptCompile Include="example-source\my-first-typescript-app\app-2.ts" />
     <TypeScriptCompile Include="example-source\my-first-typescript-app\app-1.ts" />
     <TypeScriptCompile Include="example-source\my-first-typescript-app\app.ts" />
-    <TypeScriptCompile Include="example-source\serpinski.ts" />
     <TypeScriptCompile Include="library-definitions\highlightjs.d.ts" />
     <TypeScriptCompile Include="pages\IPage.ts" />
     <TypeScriptCompile Include="pages\page-getting-started.ts" />
