--- a/TypeScriptDemo/TypeScriptDemo.csproj
+++ b/TypeScriptDemo/TypeScriptDemo.csproj
@@ -28,8 +28,10 @@
     <Content Include="example-source\my-first-typescript-app\index.html" />
     <Content Include="img\aycabtu.png" />
     <Content Include="img\create_typescript_project.png" />
+    <Content Include="img\fox.png" />
     <Content Include="img\gulp-text.png" />
     <Content Include="img\jasmine-logo.png" />
+    <Content Include="img\pig.png" />
     <Content Include="img\sheep.png" />
     <Content Include="lib\highlightjs\highlight.min.js" />
     <Content Include="pages\getting-started.html" />
