Wrapped up add types styling, fixed a few typos.

--- a/TypeScriptDemo/TypeScriptDemo.csproj
+++ b/TypeScriptDemo/TypeScriptDemo.csproj
@@ -38,6 +38,7 @@
     <Content Include="img\pencil-active.png" />
     <Content Include="img\pencil.png" />
     <Content Include="img\pig.png" />
+    <Content Include="img\prism-light.png" />
     <Content Include="img\sheep.png" />
     <Content Include="lib\highlightjs\highlight.min.js" />
     <Content Include="pages\getting-started.html" />
